# advent-of-code-2025

./: .gitignore  Cargo.toml  example.env
2025/1/: part_one.rs  part_two.rs
2025/day01/: Cargo.toml
2025/day01/src/: main.rs  part_one.rs  part_two.rs
2025/day02/: Cargo.toml
2025/day02/src/: common.rs  main.rs  part_one.rs  part_two.rs
2025/day03/: Cargo.toml
2025/day03/src/: main.rs  part_one.rs  part_two.rs
2025/day04/: Cargo.toml
2025/day04/src/: common.rs  main.rs  part_one.rs  part_two.rs
2025/day05/: Cargo.toml
2025/day05/src/: main.rs  part_one.rs  part_two.rs
2025/day07/: Cargo.toml
2025/day07/src/: main.rs
2025/day09/: Cargo.toml
2025/day09/src/: main.rs
practice/2015/day_one/: part_one.rs  part_two.rs
practice/2015/day_three/: part_one.rs  part_two.rs
practice/2015/day_two/: part_one.rs  part_two.rs
practice/2023/10/: part_one.rs
util/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
